--- a/Chef_Wordpress/cookbooks/wordpress/kitchen.yml
+++ b/Chef_Wordpress/cookbooks/wordpress/kitchen.yml
@@ -1,32 +1,38 @@
 ---
-driver:
-  name: vagrant
-
 ## The forwarded_port port feature lets you connect to ports on the VM guest via
 ## localhost on the host.
 ## see also: https://www.vagrantup.com/docs/networking/forwarded_ports
 
 #  network:
 #    - ["forwarded_port", {guest: 80, host: 8080}]
-
-provisioner:
-  name: chef_zero
-
   ## product_name and product_version specifies a specific Chef product and version to install.
   ## see the Chef documentation for more details: https://docs.chef.io/workstation/config_yml_kitchen/
   #  product_name: chef
   #  product_version: 17
 
-verifier:
-  name: inspec
+driver:
+  name: vagrant
+
+provisioner:
+  name: chef_zero
 
 platforms:
-  - name: ubuntu-20.04
-  - name: centos-8
+  - name: ubuntu-18.04
+  - name: centos-7.8
 
 suites:
-  - name: default
-    verifier:
-      inspec_tests:
-        - test/integration/default
-    attributes:
+- name: pruebas
+  run_list:
+  - recipe[wordpress::default]
+#- name: sql
+#  run_list:
+#  - recipe[wordpress::default]
+#- name: wp_cli
+#  run_list:
+#  - recipe[wordpress::default]
+#- name: wordpress_install
+#  run_list:
+#  - recipe[wordpress::default]
+#- name: wordpress_blog
+#  run_list:
+#  - recipe[wordpress::default]
